--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex, noai, noimageai">
-    <title>ポートフォリオサイト</title>
+    <title>Neu Makise's Portfolio Page</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
-        Portfolio
+        Neu Makise's Portfolio
     </header>
 
     <div class="card">
@@ -143,6 +143,7 @@
         © 2025 Neu Makise. All rights reserved.<br />
         内容の無断転載を禁止します。(Copying of the contents is prohibited)
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
