ソーシャルメディアリンクを追加

--- a/index.html
+++ b/index.html
@@ -124,9 +124,15 @@
         <p><b>ソーシャルメディア等</b></p>
         <ul>
             <li><a href="https://github.com/Neustrashimy/">GitHub</a> - コード置き場</li>
-            <li><a href="https://misskey.objektiv2.net/@neustrashimy">Misskey(misskey.objektiv2.net)</a> - 連絡はこちらへ</li>
-            <li><a href="https://nagoyadon.jp/@kumasun">Mastodon(nagoyadon.jp)</a> - 日常の記録2</li>
+            <li><a href="https://misskey.objektiv2.net/@neustrashimy">Misskey(misskey.objektiv2.net)</a> - 日常の記録 #1。連絡はこちらへ</li>
+            <li><a href="https://nagoyadon.jp/@kumasun">Mastodon(nagoyadon.jp)</a> - 日常の記録 #2</li>
             <li><a href="https://steamcommunity.com/id/N11540/">Steam</a> - ゲーム関係
+            </li>
+            <li><a href="https://www.youtube.com/@Neustrashimy">YouTube</a></li>
+            <li><a href="https://www.twitch.tv/neustrashimy">Twitch</a></li>
+            <li><a href="https://zenn.dev/kumasun">Zenn</a> - 技術系記事 #1
+            </li>
+            <li><a href="https://qiita.com/neustrashimy">Qiita</a> - 技術系記事 #2
             </li>
             <li><a href="https://vrchat.com/home/user/usr_270fac41-c7b9-4333-8bed-d9c5d4a56b55">VRChat</a> - ソロプレイ上等
             </li>
