フォントを変更。ヘッダにindex.htmlへのリンクを付加。

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex, noai, noimageai">
     <title>Neu Makise's Portfolio Page</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1+Code&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
-        Neu Makise's Portfolio
+        <a href="index.html">Neu Makise's Portfolio</a>
     </header>
 
     <div class="card">
