--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <div class="self-intro-row">
                 <p><b>牧瀬 ねう</b></p>
-                <p>PCゲームが趣味です。電子工作や写真撮影、コーディングなどもします。</p>
+                <p>ぬるげーまー。電子工作や写真撮影、コーディングなどもします。</p>
             </div>
         </div>
 
@@ -61,7 +61,7 @@
             <div class="thumbnail-item">
                 <img src="images/proj_unity.png" alt="Project">
                 <p><b>ゲーム向けMOD開発など</b><br />
-                    最近はUnityを使ったVR SNS向けのコンテンツの改変・公開などをしています</p>
+                    最近はUnityを使ったVR SNS向けコンテンツの改変・公開などをしています</p>
             </div>
             <div class="thumbnail-item">
                 <img src="images/proj_3d.png" alt="Project">
@@ -85,15 +85,15 @@
             <li><a href="https://github.com/Neustrashimy/wol-server" target="_blank">軽量Wake on LANサーバ</a> -
                 セルフホスティング型、ボタン一発でWake on
                 LANできるやつ(開発中)</li>
+            <li><a href="https://github.com/Neustrashimy/instant-film-effect" target="_blank">instant-film-effect</a> -
+                画像をインスタントカメラ風に加工するPythonベースのCLIプログラム</li>
             <li><a href="https://www.youtube.com/watch?v=7_GcPZMTPlo" target="_blank">自動楽器</a> -
                 コンピュータ制御で物理的な楽器を鳴らすSample</li>
-            <li><a href="https://github.com/Neustrashimy/instant-film-effect" target="_blank">instant-film-effect </a> -
-                画像をインスタントカメラ風に加工するPythonベースのCLIプログラム</li>
             <li>PROJECT:: Battle Over Hokkaido (散開済) -
-                過去の栄光。音声日本語化、キャンペーンミッションの声優として参加</li>
-            <li><a href="#" target="_blank">写真集 </a> -
+                過去の栄光。音声日本語化、一部ミッションの声優として参加</li>
+            <li><a href="#" target="_blank">写真集</a> -
                 撮影した写真など</li>
-            <li><a href="#">VRChatおすすめワールド集 </a> -
+            <li><a href="#">VRChatおすすめワールド集</a> -
                 Favoritesの代わり</li>
         </ul>
     </section>
@@ -110,7 +110,7 @@
         </ul>
         <p><b>主なPC遍歴</b></p>
         <ol>
-            <li>NEC PC-8801 mkII (NEC μPD780C)</li>
+            <li>NEC PC-8801 mkII (NEC uPD780C)</li>
             <li>NEC PC-9821 Ce/V166/V233 (Intel Pentium Family)</li>
             <li>AMD Duron 700MHz + ATI Radeon VE (-> NVIDIA GeForce FX5200)</li>
             <li>SHARP PC-G850V (Zylog Z80 Compatible)</li>
@@ -122,22 +122,30 @@
 
     <section class="content-section" id="links">
         <h2>Links</h2>
-        <p><b>ソーシャルメディア等</b></p>
+        <p><b>技術系</b></p>
         <ul>
             <li><a href="https://github.com/Neustrashimy/">GitHub</a> - コード置き場</li>
-            <li><a href="https://misskey.objektiv2.net/@neustrashimy">Misskey(misskey.objektiv2.net)</a> - 日常の記録 #1。連絡はこちらへ</li>
-            <li><a href="https://nagoyadon.jp/@kumasun">Mastodon(nagoyadon.jp)</a> - 日常の記録 #2</li>
-            <li><a href="https://steamcommunity.com/id/N11540/">Steam</a> - ゲーム関係
-            </li>
-            <li><a href="https://www.youtube.com/@Neustrashimy">YouTube</a></li>
-            <li><a href="https://www.twitch.tv/neustrashimy">Twitch</a></li>
             <li><a href="https://zenn.dev/kumasun">Zenn</a> - 技術系記事 #1
             </li>
             <li><a href="https://qiita.com/neustrashimy">Qiita</a> - 技術系記事 #2
             </li>
+        </ul>
+        <p><b>ソーシャルメディア</b></p>
+        <ul>
+            <li><a href="https://misskey.objektiv2.net/@neustrashimy">Misskey(misskey.objektiv2.net)</a> - 日常の記録
+                #1。連絡はこちらへ</li>
+            <li><a href="https://nagoyadon.jp/@kumasun">Mastodon(nagoyadon.jp)</a> - 日常の記録 #2</li>
+            <li><a href="https://mixi.social/@neustrashimy">mixi2</a> - VRChat寄りの記録</li>
+            <li><a href="https://note.com/kumasunorz">note</a> - ブログ</li>
+            <li><a href="https://www.youtube.com/@Neustrashimy">YouTube</a></li>
+            <li><a href="https://www.twitch.tv/neustrashimy">Twitch</a></li>
+        </ul>
+        <p><b>ゲーム関連</b></p>
+        <ul>
+            <li><a href="https://steamcommunity.com/id/N11540/">Steam</a> - ゲーミングプラットフォーム
+            </li>
             <li><a href="https://vrchat.com/home/user/usr_270fac41-c7b9-4333-8bed-d9c5d4a56b55">VRChat</a> - ソロプレイ上等
             </li>
-            <li><a href="https://mixi.social/@neustrashimy">mixi2</a> - VRChat寄りの記録</li>
         </ul>
         <p><b>外部：お世話になっている方々など</b></p>
         <ul>
