軽微な修正

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h2>Projects</h2>
         <p>携わっているもの、使えるかわからない諸々</p>
         <ul>
-            <li><a href="https://github.com/Neustrashimy/wol-server" target="_blank">軽量Wake on LANサーバ</a> -
+            <li><a href="https://github.com/Neustrashimy/wol-server" target="_blank">軽量WoLサーバ</a> -
                 セルフホスティング型、ボタン一発でWake on
                 LANできるやつ(開発中)</li>
             <li><a href="https://github.com/Neustrashimy/instant-film-effect" target="_blank">instant-film-effect</a> -
