VR環境の項目を追加、ソーシャルメディア欄を編集

--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
             <li>Intel Core i7 6700 + AMD Radeon RX 480</li>
             <li>AMD Ryzen 7 5800X + AMD Radeon RX 6700XT (-> AMD Radeon RX 7900GRE)</li>
         </ol>
+        <p><b>VR環境</b></p>
+        <ul>
+            <li>Meta Quest 3</li>
+            <li>Shiftall Haritora X Wireless + Extension</li>
+        </ul>
     </section>
 
     <section class="content-section" id="links">
@@ -134,10 +139,11 @@
         </ul>
         <p><b>ソーシャルメディア</b></p>
         <ul>
-            <li><a href="https://misskey.objektiv2.net/@neustrashimy">Misskey(misskey.objektiv2.net)</a> - 日常の記録
-                #1。連絡はこちらへ</li>
+            <li><a href="https://misskey.objektiv2.net/@neustrashimy">Misskey(misskey.objektiv2.net)</a> - 日常の記録 #1</li>
             <li><a href="https://nagoyadon.jp/@kumasun">Mastodon(nagoyadon.jp)</a> - 日常の記録 #2</li>
-            <li><a href="https://mixi.social/@neustrashimy">mixi2</a> - VRChat寄りの記録</li>
+            <li><a href="https://x.com/n_makise_vrc">X (Twitter)</a> - VRChat寄りの記録 #1</li>
+            <li><a href="https://mixi.social/@neustrashimy">mixi2</a> - VRChat寄りの記録 #2</li>
+            <li><a href="">Discord</a> - URLの貼り方わかんね</li>
             <li><a href="https://note.com/kumasunorz">note</a> - ブログ</li>
             <li><a href="https://www.youtube.com/@Neustrashimy">YouTube</a></li>
             <li><a href="https://www.twitch.tv/neustrashimy">Twitch</a></li>
